fix: increment z-index of sticky class

--- a/projecto/frontend5/src/styles.scss
+++ b/projecto/frontend5/src/styles.scss
@@ -31,20 +31,12 @@ a {
   font-weight: 600;
 }
 
-r-data-row {
-  // min-height: 3em;
-  border-bottom: 1px solid #eeeeee !important;
-  // fix clarity design style .clr-row for r-data-row component
-  margin-left: 0 !important;
-  margin-right: 0 !important;
-}
-
-r-data-row:nth-child(even) {
-  background-color: #e1f1f6 !important;
-}
-
-r-data-row:hover {
-  background-color: #ddd !important;
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: var(--clr-global-app-background);
+  z-index: 10;
 }
 
 /*
